A config that declares no capabilities takes its provider's default
`LlmConfig.capabilities == null` now means not declared, a state of its
own: `effectiveCapabilities()` falls back to `LlmProvider.defaultCapabilities()`
— Anthropic and OpenAI read images and PDFs, Gemini also audio, Azure OpenAI
images, hosts of arbitrary models (local servers, routers) tool calling
only. A declared set, the empty set included, always wins. `supports()`
asks the effective set, so every config written before the field existed
sends images to a vision model without anyone ticking a box.

The Admin UI preselects the effective set and says where it comes from;
saving the form pins it. The detail view marks a provider default as such.
The javadoc, the form hint and the docs no longer call the set informative:
Vision and Documents decide what the mapper sends, tool calling and audio
are declarative for now.

Claude-Session: https://claude.ai/code/session_0185b7vo7w9JQeENNZNupPwD